--- a/app/views/templates/projectList.html
+++ b/app/views/templates/projectList.html
@@ -8,22 +8,33 @@
     <div class="row" ng-repeat="project in projects">
         <div class="col-sm-12">
             <div class="thumbnail" style="height: 199px;">
-                <div class="caption" class="col-xs-7 col-sm-7 col-md-8">
-                    <h4 class="col-xs-6 col-sm-4">{{project.name}} </h4>
-                    <div class="col-xs-6 col-sm-6">
-                        <a href="/#!/project/{{project.Model.ID}}" class="btn btn-sm btn-primary" role="button">View</a>
-                        <button class="btn btn-sm btn-primary" role="button" data-toggle="modal"
-                            ng-click="reloadUsers(project.id)" data-target="#myModal">Share</button>
-                        <a href="/#!/project/edit/{{project.Model.ID}}" class="btn btn-sm btn-default"
-                            role="button">Edit</a>
-                        <a href="" ng-click="deleteProject(project.id)" class="btn btn-sm btn-danger"
-                            role="button">Delete</a>
-                    </div>
-                    <div class="col-xs-12 col-sm-12">{{project.description  | cut:true:200:' ...'}} </div>
-                    <div class="col-xs-12 col-sm-12" style="color: darkgray;">
-                        <div>State: {{project.state}}</div>
-                        <div>Type: {{project.type}}</div>
-                        <div>Created: {{project.createdAt}}</div>
+
+                <div class="caption" class="col-xs-5 col-sm-5 col-md-5">
+                    <div class="row">
+                        <div class="col-md-8 col-sm-8">
+                            <h4 class="col-xs-6 col-md-6">{{project.name}} </h4>
+                            <div class="col-xs-6 col-sm-6">
+                                <a href="/#!/project/{{project.Model.ID}}" class="btn btn-sm btn-primary"
+                                    role="button">View</a>
+                                <button class="btn btn-sm btn-primary" role="button" data-toggle="modal"
+                                    ng-click="reloadUsers(project.id)" data-target="#myModal">Share</button>
+                                <a href="/#!/project/edit/{{project.Model.ID}}" class="btn btn-sm btn-default"
+                                    role="button">Edit</a>
+                                <a href="" ng-click="deleteProject(project.id)" class="btn btn-sm btn-danger"
+                                    role="button">Delete</a>
+                            </div>
+                            <div class="col-xs-12 col-sm-12">{{project.description  | cut:true:200:' ...'}} </div>
+                            <div class="col-xs-12 col-sm-12" style="color: darkgray;">
+                                <div>State: {{project.state}}</div>
+                                <div>Type: {{project.type}}</div>
+                                <div>Created: {{project.createdAt}}</div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="col-md-4">
+                                <img ng-src="{{project.imgToShow}}" width="200px" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
